# effective-mobile-test-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  entrypoint.py  pyproject.toml
.github/workflows/: _fast-checks.yml  cd-cleanup-staging.yml  cd-deploy-ci-runner.yml  cd-deploy-staging.yml  ci-feature-branch.yml  ci-pr.yml  ci-push-to-ghcr.yml  release-to-staging.yml
app/application/dto/: __init__.py  base.py  dto.py
app/application/exceptions/: __init__.py  base.py  exceptions.py
app/application/ports/: __init__.py  presenters.py  services.py  uow.py
app/application/use_cases/: __init__.py  authenticate_user.py  base.py  create_user.py  delete_user.py  update_user.py  view_orders.py  view_payments.py
app/config/: __init__.py  config.py  logging.py
app/domain/entities/: base.py
app/domain/exceptions/: __init__.py  base.py  exceptions.py
app/domain/services/: __init__.py  services.py
app/domain/value_objects/: __init__.py  base.py  constants.py  email.py  raw_password.py  user_id.py  user_password_hash.py  user_role.py  username.py
app/infrastructure/security/: adapters.py  jwt_service.py
app/interface/http/: main.py  schemas.py  utils.py
app/scripts/: bootstrap.py
ci/: env.test
deploy/bootstrap/: bootstrap_db.sh
deploy/helm/: Chart.yaml  values-ci-runner.yaml  values-staging.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  configmap-db-bootstrap.yaml  configmap.yaml  deployment-api.yaml  deployment-db.yaml  service-api.yaml  (+3 more)
dev/: create_compose_secrets.py  docker-compose.yml  env.dev
tests/: adapters.py
(+24 files in other folders)
