[project]
name = "fastapi-ddd-template"
version = "0.1.0"
description = "Example of SOLID DDD architecture with FastAPI and SQLAlchemy"
authors = [
    {name = "kaxcheg",email = "kaxcheg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.1,<0.117.0"
sqlalchemy = ">=2.0.41,<3.0.0"
uvicorn = ">=0.35.0,<0.36.0"
pyjwt = ">=2.10.1,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
python-multipart = ">=0.0.20,<0.0.21"
alembic = ">=1.16.4,<2.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.1"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^1.1.0"
pyyaml = "^6.0.2"
black = "^25.9.0"
ruff = "^0.13.1"
isort = "^6.0.1"
yamllint = "^1.37.1"


[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
